2008-12-18  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::renameGroup): fixed bug #2412310:
	"Umlauts in group names". The GUI should properly handle non-ascii
	characters in the rule group names

2008-12-15  vadim  <vadim@vk.crocodile.org>

	* ipt.cpp, ipfw.cpp, pf.cpp, iosacl.cpp: changes for FR #2431602:
	support for rulesets configured as "dual address family", that is,
	rulesets that should be compiled for both ipv4 and ipv6.  Compiler
	processes rulesets like this twice, first for ipv4 and then for
	ipv6. On each pass it will only use address and service objects
	that match address family it uses for the ruleset. This also
	applies to "compile-time" DNSName objects, that is, it will use
	getaddrinfo() to get AF_INET address on ipv4 pass and AF_INET6 on
	ipv6 pass.

	Rules with "any" in rule elements in the "dual address family"
	ruleset yield iptables commands for both families. This was the
	reason I made setting exclusive in the first place. This means
	that users who do not want fwbuilder to generate ipv6 policy for
	them and want all ipv6 accepted, should not use "dual address
	family" setting. If the do, the bottom catch-all rule will install
	ip6tables command to block all ipv6 automatically even if all
	rules have absolutely no ipv6 objects at all.

	* RuleSetDialog.cpp (RuleSetDialog::applyChanges): implemented
	feature request #2431602: "Feature request: Unified
	policies (IPv4/v6)". RuleSet object now has two variables that
	define which address family it should be compiled for - ipv4 or
	ipv6. It is possible to have both set, in which case the same
	ruleset will be compiled for both address families.

2008-12-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* VERSION (VERSION): started v3.0.4

	* v3.0.3 released, merged to trunk. This comment is -r689

2008-12-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::contextMenu): fixed bug #2407141