@@ -1,1 +1,1 @@
-#define BUILD_NUM 695
+#define BUILD_NUM 696
